--- a/hw1_testing/hw1-testing/pom.xml
+++ b/hw1_testing/hw1-testing/pom.xml
@@ -18,13 +18,13 @@
             <artifactId>spring-context</artifactId>
             <version>5.2.1.RELEASE</version>
         </dependency>
-        <!-- Test -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
         </dependency>
+        <!-- Test -->
     </dependencies>
 
 </project>
