--- a/hw1_testing/hw1-testing/pom.xml
+++ b/hw1_testing/hw1-testing/pom.xml
@@ -25,6 +25,13 @@
             <scope>provided</scope>
         </dependency>
         <!-- Test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.5.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
