--- a/hw9_jpa/pom.xml
+++ b/hw9_jpa/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>spring-shell-starter</artifactId>
 			<version>2.0.1.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
