Add liquibase support

--- a/hw9_jpa/pom.xml
+++ b/hw9_jpa/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>guava</artifactId>
             <version>28.2-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
