--- a/hw9_jpa/src/main/resources/application.yml
+++ b/hw9_jpa/src/main/resources/application.yml
@@ -18,3 +18,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+liquibase:
+  change-log: classpath:db/changelog/db.changelog-master.xml
