--- a/hw9_jpa/src/test/resources/application.yml
+++ b/hw9_jpa/src/test/resources/application.yml
@@ -20,3 +20,6 @@ spring:
         format_sql: true
 
     show-sql: true
+
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
