--- a/hw9_jpa/src/main/resources/application.yml
+++ b/hw9_jpa/src/main/resources/application.yml
@@ -6,8 +6,7 @@ spring:
 
   datasource:
     url: jdbc:h2:mem:testdb
-    initialization-mode: always
-    data: data.sql
+    initialization-mode: never
 
   jpa:
     hibernate:
