Fix AuthorDaoMongoTest and BookDaoMongoTest

--- a/hw13_spring_data_mongo/src/test/resources/application.yml
+++ b/hw13_spring_data_mongo/src/test/resources/application.yml
@@ -6,4 +6,14 @@ spring:
 
   data:
     mongodb:
-      database: library_db
+      database: libraryDb
+      host: localhost
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
