--- a/hw16_classic_web/src/main/resources/application.yml
+++ b/hw16_classic_web/src/main/resources/application.yml
@@ -18,5 +18,8 @@ spring:
       hibernate:
         format_sql: true
 
+    open-in-view: false
+
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
+
