Remove @ModelAttribute from editBookPost

--- a/hw16_classic_web/src/test/resources/application.yml
+++ b/hw16_classic_web/src/test/resources/application.yml
@@ -19,6 +19,7 @@ spring:
         format_sql: true
 
     show-sql: true
+    open-in-view: false
 
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
