--- a/hw24_authorization/src/main/resources/application.yml
+++ b/hw24_authorization/src/main/resources/application.yml
@@ -23,3 +23,7 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
 
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
