--- a/hw25_spring_batch/src/main/resources/application.yml
+++ b/hw25_spring_batch/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 
   shell:
     interactive:
-      enabled: false
+      enabled: true
 
   datasource:
     url: jdbc:h2:mem:testdb
@@ -28,4 +28,4 @@ spring:
   data:
     mongodb:
       database: libraryDb
-      host: localhost
+      host: dmserver
