Define spring.data.rest.base-path property

--- a/hw29_modern_web_spring_actuator/src/main/resources/application.yml
+++ b/hw29_modern_web_spring_actuator/src/main/resources/application.yml
@@ -38,3 +38,7 @@ spring:
 
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
+
+  data:
+    rest:
+      base-path: /datarest
