--- a/hw29_modern_web_spring_actuator/pom.xml
+++ b/hw29_modern_web_spring_actuator/pom.xml
@@ -66,10 +66,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -84,8 +84,7 @@
 
         <dependency>
             <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-rest-hal-browser</artifactId>
-<!--            <version>3.1.0.RELEASE</version> -->
+            <artifactId>spring-data-rest-hal-explorer</artifactId>
         </dependency>
 
         <dependency>
