--- a/hw31_classic_web_docker/docker-compose.yml
+++ b/hw31_classic_web_docker/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '2'
+version: '3'
 services:
   books:
-    image: books:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     environment:
