--- a/hw31_classic_web_docker/pom.xml
+++ b/hw31_classic_web_docker/pom.xml
@@ -78,6 +78,7 @@
     </dependencies>
 
     <build>
+        <finalName>books</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
