--- a/hw33_resilience4j/src/main/resources/application.yml
+++ b/hw33_resilience4j/src/main/resources/application.yml
@@ -14,6 +14,22 @@ resilience4j.circuitbreaker:
       waitDurationInOpenState: 10s
 
 
+management:
+
+  endpoint:
+    health:
+      show-details: always
+
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics
+
+  health:
+    circuitbreakers:
+      enabled: true
+
+
 spring:
 
   datasource:
